--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  // font-size: 15px; // Base font size
+}
+
+ul#movieList {
+  width: 100%;
+  li {
+    display: inline-block;
+  }
+}
